--- a/css/main.css
+++ b/css/main.css
@@ -5,3 +5,127 @@
 {
 	display: none;
 }
+
+body{
+	background-color: #D3D3D3;
+}
+
+#container{
+	width: 960px;
+	margin: 0 auto;
+	background-color: #fff;
+	box-shadow: 0px 20px 20px rgba(0,0,0,.5);
+}
+
+#mainHeader{
+	padding-top: 5px;
+	display: flex;
+	flex-direction: row;
+}
+
+#headerLogo{
+	width: 200px;
+	padding-left: 20px;
+	position: absolute;
+}
+
+#mainNav{
+	background-color: #0A0E7D;
+	width: 960px;
+	height: 60px;
+	margin-top: 40px;
+}
+
+#mainNav ul{
+	list-style: none;
+	padding-left: 280px;
+	padding-top: 15px;
+}
+
+#mainNav ul li{
+	display: inline;
+	padding-right: 70px;
+}
+
+#mainNav ul li a{
+	text-decoration: none;
+	color: #fff;
+	text-transform: uppercase;
+	font-size: 32px;
+	font-family: 'Staatliches', cursive;
+	transition: all 0.25s;
+}
+
+#mainNav ul li a:hover{
+	color: #EACB11;
+	border-bottom: 9px solid #EACB11;
+}
+
+#iconDescription{
+	margin-top: 40px;
+	padding-left: 50px;
+	padding-right: 50px;
+}
+
+#iconDescription h2{
+	text-transform: uppercase;
+	font-size: 42px;
+	font-family: 'Staatliches', cursive;
+}
+
+#iconDescription p{
+	font-size: 18px;
+	font-family: 'Raleway', sans-serif;
+	line-height: 25px;
+	margin-top: 15px;
+}
+
+#icons{
+	width: 960px;
+	margin-top: -20px;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+}
+
+.iconContainer{
+    width: 240px;
+	height: 240px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+}
+
+.iconWrapper{
+	margin: 0 auto;
+	width: 150px;
+	height: 150px;
+	transition: all 0.5s ease;
+}
+
+.iconWrapper:hover{
+	transform: scale(1.2);
+	transform-origin: 50% 50%;
+}
+
+.marvelIcon{
+	filter: grayscale(1);
+	transition: all 0.5s ease;
+}
+
+.marvelIcon:hover{
+	filter: grayscale(0);
+}
+
+#mainFooter{
+	background-color: #0A0E7D;
+	width: 960px;
+	height: 40px;
+}
+
+#mainFooter p{
+	font-family: 'Raleway', sans-serif;
+	color: white;
+	text-align: center;
+	padding-top: 15px;
+}
